--- a/index.html
+++ b/index.html
@@ -152,19 +152,15 @@
 		<h1>客户反馈</h1>
 		<h2>Customer Feedback</h2>
 		<ul class="ff">
-			<li>
-				<div class="nei">
+			<li class="nei">
 					<img src="images/m5.png">
 					<p>搭理搭理啦卡死了看见拉科技案例库的骄傲里大理石的你的离开谁骄傲滴</p>
 					<p>2012-02-13</p>
-				</div>
 			</li>
-			<li>
-				<div class="nei">
+			<li class="nei">
 					<img src="images/m5.png">
 					<p>搭理搭理啦卡死了看见拉科技案例库的骄傲里大理石的你的离开谁骄傲滴倒计</p>
 					<p>2012-02-13</p>
-				</div>
 			</li>
 		</ul>
 	</div>
